Check for empty prefs